--- a/job_PSHA.ini
+++ b/job_PSHA.ini
@@ -26,7 +26,8 @@ pointsource_distance = 0
 [site_params]
 reference_vs30_type = measured
 reference_vs30_value = 760.0
-reference_depth_to_2pt5km_per_sec = 5.0
+#reference_depth_to_2pt5km_per_sec = 5.0
+reference_depth_to_2pt5km_per_sec = 0.0
 reference_depth_to_1pt0km_per_sec = 100.0
 
 [calculation]
@@ -34,9 +35,10 @@ source_model_logic_tree_file = ../scenario_Perth/NSHA18/input/nsha18_source_mode
 gsim_logic_tree_file = ../scenario_Perth/NSHA18/input/NSHA18_Aus_GMPE_75thp_logic_tree_cal_power_p0.4_simplified_July18.xml
 investigation_time = 50.0
 intensity_measure_types_and_levels = {"PGA": [0.00007, 0.0001, 0.0003, 0.0005, 0.0007, 0.001, 0.003, 0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145, 0.203, 0.284, 0.397, 0.556, 0.778, 1.09]}
-truncation_level = 3
+#truncation_level = 3
+truncation_level = 0
 maximum_distance = {"Cratonic": 400.0, "Non_cratonic": 400.0, "Subduction": 1000.0}
-#minimum_intensity = {"PGA": 0.001}
+minimum_intensity = {"PGA": 0.001}
 
 [event_based_params]
 #ses_per_logic_tree_path = 100
