--- a/Rp2500/job_rock.ini
+++ b/Rp2500/job_rock.ini
@@ -1,19 +1,13 @@
 [general]
-description = Scenario Calculation
+# EVENT should be replaced
+description = Scenario at Rock Rp2500 
 calculation_mode = scenario
 random_seed = 3
 
 [geometry]
-# either sites_csv or site_model_file
-<<<<<<< HEAD
-#sites_csv = ../../input/sites_0p005.csv
-sites = 116.7683 -31.8912
-=======
-region = 116.72 -31.82, 116.82 -31.82, 116.82 -31.95, 116.72 -31.95
-region_grid_spacing = 0.5
-#sites_csv = ../../input/sites_0p005.csv
+region = 116.72 -31.82, 116.84 -31.82, 116.84 -31.93, 116.72 -31.93
+region_grid_spacing = 0.2
 #sites = 116.7683 -31.8912
->>>>>>> 2d9fd18c083841dd10dd1a666de760618446d5ff
 
 [erf]
 rupture_mesh_spacing = 2.0
@@ -29,11 +23,7 @@ reference_depth_to_2pt5km_per_sec = 0.0
 reference_depth_to_1pt0km_per_sec = 100.0
 
 [calculation]
-<<<<<<< HEAD
-rupture_model_file = event_set.xml
-=======
-rupture_model_file = rupture.xml
->>>>>>> 2d9fd18c083841dd10dd1a666de760618446d5ff
+rupture_model_file = ./rupture_Rp2500.xml
 intensity_measure_types = PGA 
 truncation_level = 0.0
 maximum_distance = 200
@@ -46,4 +36,4 @@ number_of_ground_motion_fields = 1
 
 [output]
 ground_motion_fields = True
-export_dir = /home/547/hxr547/Projects/York/Rp2500/output
+export_dir = output
