add retrofit scheme 1 2 exposure

--- a/input/job_risk.ini
+++ b/input/job_risk.ini
@@ -1,5 +1,5 @@
 [general]
-# EVENT, GMID, YEAR, LEVEL should be replaced
+# EVENT, GMID, YEAR, LEVEL, SCHEME should be replaced
 description = Scenario Risk <EVENT>
 calculation_mode = scenario_risk
 random_seed = 3
@@ -10,7 +10,7 @@ sites_csv = ./<OUTPUT>/sitemesh_<GMID>.csv
 asset_hazard_distance = 20
 
 [exposure]
-exposure_file = ../input/exposure_York_<YEAR>.xml
+exposure_file = ../input/exposure_York_<SCHEME>_<YEAR>.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [boundaries]
