add prob risk in batch

--- a/PSRA/job_event_risk.ini
+++ b/PSRA/job_event_risk.ini
@@ -1,11 +1,12 @@
 [general]
+# YEAR, SCHEME, OUTPUT should be replaced
 description = Stochastic Event-Based Hazard/Risk (Perth)
 #calculation_mode = event_based_risk
 calculation_mode = ebrisk
 ses_seed = 42
 
 [exposure]
-exposure_file = ../input/exposure_York_0.xml
+exposure_file = ../input/exposure_York_0_0.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [risk_calculation]
@@ -63,11 +64,13 @@ ground_motion_correlation_model =
 ground_motion_correlation_params =
 
 [outputs]
+aggregate_by = heritage
 avg_losses = true
+mean_hazard_curves = true
 #quantile_loss_curves = 0.15 0.85
 #conditional_loss_poes = 0.0021, 0.000404
 #hazard_curves_from_gmfs = false
 #asset_loss_table = true
 
 [export]
-export_dir = ./output
+export_dir = output_37n
