--- a/Rp2500/job_damage.ini
+++ b/Rp2500/job_damage.ini
@@ -1,16 +1,16 @@
 [general]
-# EVENT, GMID, YEAR should be replaced
+# EVENT, GMID, YEAR, SCHEME should be replaced
 description = Scenario Damage Rp2500 
 calculation_mode = scenario_damage
 random_seed = 3
 
 [hazard]
-gmfs_csv = ./output_37/gmf-data_46_averaged.csv
-sites_csv = ./output_37/sitemesh_46.csv
+gmfs_csv = ./output_37n/gmf-data_76_averaged.csv
+sites_csv = ./output_37n/sitemesh_76.csv
 asset_hazard_distance = 20
 
 [exposure]
-exposure_file = ../input/exposure_York_30.xml
+exposure_file = ../input/exposure_York_R2_30.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [boundaries]
@@ -18,6 +18,7 @@ taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [fragility]
 structural_fragility_file = ../input/fragility_GA_PGA_Sep2019.xml
+aggregate_by = heritage
 
 [output]
-export_dir = output
+export_dir = output_37n
