--- a/input/job_event_risk.ini
+++ b/input/job_event_risk.ini
@@ -1,23 +1,21 @@
 [general]
-description = Classical probabilistic risk 
-calculation_mode = classical_risk
+# YEAR, SCHEME, OUTPUT should be replaced
+description = Stochastic Event-Based Hazard/Risk (Perth)
+#calculation_mode = event_based_risk
+calculation_mode = ebrisk
 ses_seed = 42
 
 [exposure]
-exposure_file = ../input/exposure_York_R1_30.xml
+exposure_file = ../input/exposure_York_<SCHEME>_<YEAR>.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
-
-[sites]
-#region = 116.72 -31.82, 116.84 -31.82, 116.84 -31.93, 116.72 -31.93
-#region_grid_spacing = 0.2
 
 [risk_calculation]
 asset_hazard_distance = 20
+individual_curves = false
 master_seed = 42
 asset_correlation = 0.0
 risk_investigation_time = 1.0
 return_periods = 5, 10, 25, 50, 100, 250, 500, 1000, 2500, 5000
-lrem_steps_per_interval = 5
 
 [erf]
 rupture_mesh_spacing = 2.0
@@ -49,12 +47,14 @@ number_of_logic_tree_samples = 100
 
 [hazard_calculation]
 truncation_level = 3
-investigation_time = 1
+# failed and decrease
+#investigation_time = 50
+investigation_time = 500
 maximum_distance = {"Cratonic": 400.0, "Non_cratonic": 400.0, "Subduction": 1000.0}
 #maximum_distance = {"Cratonic": 400.0}
 intensity_measure_types_and_levels = {"PGA": [0.00007, 0.0001, 0.0003, 0.0005, 0.0007, 0.001, 0.003, 0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145, 0.203, 0.284, 0.397, 0.556, 0.778, 1.09]}
 #ses_per_logic_tree_path = 1
-#ses_per_logic_tree_path = 1000
+ses_per_logic_tree_path = 1000
 #ses_per_logic_tree_path = 5000
 #ses_per_logic_tree_path = 10000
 #ses_per_logic_tree_path = 0
@@ -64,11 +64,13 @@ ground_motion_correlation_model =
 ground_motion_correlation_params =
 
 [outputs]
+aggregate_by = heritage
 avg_losses = true
+mean_hazard_curves = true
 #quantile_loss_curves = 0.15 0.85
 #conditional_loss_poes = 0.0021, 0.000404
 #hazard_curves_from_gmfs = false
 #asset_loss_table = true
 
 [export]
-export_dir = ./output_R1
+export_dir = <OUTPUT>
