--- a/Rp1000/job_risk.ini
+++ b/Rp1000/job_risk.ini
@@ -1,16 +1,16 @@
 [general]
-# EVENT, GMID, YEAR, LEVEL should be replaced
+# EVENT, GMID, YEAR, LEVEL, SCHEME should be replaced
 description = Scenario Risk Rp1000
 calculation_mode = scenario_risk
 random_seed = 3
 
 [hazard]
-gmfs_csv = ./output_37/gmf-data_24_averaged.csv
-sites_csv = ./output_37/sitemesh_24.csv
+gmfs_csv = ./output_37n/gmf-data_39_averaged.csv
+sites_csv = ./output_37n/sitemesh_39.csv
 asset_hazard_distance = 20
 
 [exposure]
-exposure_file = ../input/exposure_York_30.xml
+exposure_file = ../input/exposure_York_R2_30.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [boundaries]
@@ -25,6 +25,7 @@ ignore_covs = true
 
 [risk_calculation]
 time_event = night
+aggregate_by = heritage
 
 [output]
-export_dir = output
+export_dir = output_37n
