--- a/input/job_classical_risk.ini
+++ b/input/job_classical_risk.ini
@@ -1,10 +1,11 @@
 [general]
+# YEAR, SCHEME, OUTPUT should be replaced
 description = Classical probabilistic risk 
 calculation_mode = classical_risk
-ses_seed = 42
+random_seed = 42
 
 [exposure]
-exposure_file = ../input/exposure_York_R1_30.xml
+exposure_file = ../input/exposure_York_<SCHEME>_<YEAR>.xml
 taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [sites]
@@ -44,11 +45,11 @@ gsim_logic_tree_file = ../../scenario_Perth/NSHA18/input/NSHA18_Aus_GMPE_75thp_l
 #gsim_logic_tree_file = ../../scenario_Perth/NSHA18/input/NSHA18_Aus_GMPE_75thp_logic_tree_cal_power_p0.4_simplified_July18_cratonic.xml
 #number_of_logic_tree_samples = 1000 
 # failed: 1000 event_risk
-number_of_logic_tree_samples = 100
+number_of_logic_tree_samples = 0
 
 
 [hazard_calculation]
-truncation_level = 3
+truncation_level = 3.0
 investigation_time = 1
 maximum_distance = {"Cratonic": 400.0, "Non_cratonic": 400.0, "Subduction": 1000.0}
 #maximum_distance = {"Cratonic": 400.0}
@@ -58,17 +59,18 @@ intensity_measure_types_and_levels = {"PGA": [0.00007, 0.0001, 0.0003, 0.0005, 0
 #ses_per_logic_tree_path = 5000
 #ses_per_logic_tree_path = 10000
 #ses_per_logic_tree_path = 0
-minimum_intensity = {"PGA": 0.01}
+#minimum_intensity = {"PGA": 0.01}
 #minimum_magnitude = 5.3
 ground_motion_correlation_model =
 ground_motion_correlation_params =
 
 [outputs]
 avg_losses = true
+aggregate_by = heritage
 #quantile_loss_curves = 0.15 0.85
 #conditional_loss_poes = 0.0021, 0.000404
 #hazard_curves_from_gmfs = false
 #asset_loss_table = true
 
 [export]
-export_dir = ./output_R1
+export_dir = <OUTPUT>
