--- a/input/job_damage.ini
+++ b/input/job_damage.ini
@@ -18,6 +18,7 @@ taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [fragility]
 structural_fragility_file = ../input/fragility_GA_PGA_Sep2019.xml
+aggregate_by = heritage
 
 [output]
 export_dir = <OUTPUT>
