--- a/Rp500/job_damage.ini
+++ b/Rp500/job_damage.ini
@@ -5,8 +5,8 @@ calculation_mode = scenario_damage
 random_seed = 3
 
 [hazard]
-gmfs_csv = ./output_37n/gmf-data_2_averaged.csv
-sites_csv = ./output_37n/sitemesh_2.csv
+gmfs_csv = ./output_37x/gmf-data_2_averaged.csv
+sites_csv = ./output_37x/sitemesh_2.csv
 asset_hazard_distance = 20
 
 [exposure]
@@ -18,7 +18,6 @@ taxonomy_mapping_csv = ../input/taxonomy_mapping.csv
 
 [fragility]
 structural_fragility_file = ../input/fragility_GA_PGA_Sep2019.xml
-aggregate_by = heritage
 
 [output]
-export_dir = output_37n
+export_dir = output_37x
