--- a/Rp1000/job_risk.ini
+++ b/Rp1000/job_risk.ini
@@ -5,8 +5,8 @@ calculation_mode = scenario_risk
 random_seed = 3
 
 [hazard]
-gmfs_csv = ./output_37n/gmf-data_39_averaged.csv
-sites_csv = ./output_37n/sitemesh_39.csv
+gmfs_csv = ./output_37x/gmf-data_39_averaged.csv
+sites_csv = ./output_37x/sitemesh_39.csv
 asset_hazard_distance = 20
 
 [exposure]
@@ -25,7 +25,6 @@ ignore_covs = true
 
 [risk_calculation]
 time_event = night
-aggregate_by = heritage
 
 [output]
-export_dir = output_37n
+export_dir = output_37x
